# home-run-predictor

./: .gitignore  README.md  pyproject.toml
predictions/: 2026-07-17.csv  823440.csv
src/mlb_hr_predictor/: __init__.py  cli.py  config.py  data_collection.py  features.py  model.py  predict.py
tests/: test_data_collection.py  test_features.py  test_model.py  test_predict.py
