[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-home-run-predictor"
version = "0.1.0"
description = "Leakage-safe MLB hitter home-run probability baseline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3,<2",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "pyarrow>=15,<24",
  "pybaseball>=2.2.7,<3",
  "requests>=2.31,<3",
  "scikit-learn>=1.6,<1.8",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7"]

[project.scripts]
mlb-hr = "mlb_hr_predictor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
